--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "react": "^17.0.1",
