--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   }
 }
